Added blog page.

--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,11 @@ relative_permalinks: true
 title:               'TheStigger Blog'
 tagline:             'Keep Calm and Code On'
 description:         'Small blog.'
-url:                 http://lanyon.getpoole.com
+url:                 http://thestigger.github.io
 baseurl:             ''
 paginate:            5
 pages_list:
+    Blog: '/blog'
     About: '/about'
     Archive: '/archive'
     Feed: '/atom.xml'
