--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               'TheStigger Blog'
-tagline:             'Keep Calm and Code On'
-description:         'Small blog.'
+title:               'TheStigger'
+tagline:             'Solomkin Maxim'
+description:         'Keep Calm and Code On'
 url:                 https://github.com/TheStigger/
 baseurl:             ''
 paginate:            5
