--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ baseurl:             ''
 paginate:            5
 paginate_path:       "blog/page/:num/"
 pages_list:
+    Blog: '/blog'
     About: '/about'
     Archive: '/archive'
     Feed: '/atom.xml'
